Shang New Live/src/objects/Charge_Master__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Days_of_the_Month__c</fullName>
        <label>Billing Days of the Month</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Charge Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicable Charge</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Master</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>